--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -49,9 +49,9 @@ jobs:
       - name: 🧰 Select Xcode 16
         shell: bash
         run: |
-         set -euo pipefail
-         sudo xcode-select -s /Applications/Xcode_16.app
-         xcodebuild -version
+          set -euo pipefail
+          sudo xcode-select -s /Applications/Xcode_16.app
+          xcodebuild -version
 
       - name: Compute build paths
         shell: bash
@@ -249,7 +249,13 @@ jobs:
           print("p12 bytes:", len(data))
           PY
 
-          security import "$CERT_P12"             -k "$KEYCHAIN_PATH"             -P "$IOS_DIST_CERT_PASSWORD"             -T /usr/bin/codesign             -T /usr/bin/security             -T /usr/bin/xcodebuild             -T /usr/bin/productbuild
+          security import "$CERT_P12" \
+            -k "$KEYCHAIN_PATH" \
+            -P "$IOS_DIST_CERT_PASSWORD" \
+            -T /usr/bin/codesign \
+            -T /usr/bin/security \
+            -T /usr/bin/xcodebuild \
+            -T /usr/bin/productbuild
 
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
@@ -353,10 +359,26 @@ jobs:
 
           set +o pipefail
           if [ -n "${XCPRETTY_CMD:-}" ]; then
-            xcodebuild               -workspace "$XCODE_WORKSPACE"               -scheme "$XCODE_SCHEME"               -configuration "$CONFIGURATION"               -sdk iphoneos               -archivePath "$ARCHIVE_PATH"               -destination "generic/platform=iOS"               DEVELOPMENT_TEAM="$APPLE_TEAM_ID"               archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG" | eval "$XCPRETTY_CMD"
+            xcodebuild \
+              -workspace "$XCODE_WORKSPACE" \
+              -scheme "$XCODE_SCHEME" \
+              -configuration "$CONFIGURATION" \
+              -sdk iphoneos \
+              -archivePath "$ARCHIVE_PATH" \
+              -destination "generic/platform=iOS" \
+              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+              archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG" | eval "$XCPRETTY_CMD"
             XC=${PIPESTATUS[0]}
           else
-            xcodebuild               -workspace "$XCODE_WORKSPACE"               -scheme "$XCODE_SCHEME"               -configuration "$CONFIGURATION"               -sdk iphoneos               -archivePath "$ARCHIVE_PATH"               -destination "generic/platform=iOS"               DEVELOPMENT_TEAM="$APPLE_TEAM_ID"               archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG"
+            xcodebuild \
+              -workspace "$XCODE_WORKSPACE" \
+              -scheme "$XCODE_SCHEME" \
+              -configuration "$CONFIGURATION" \
+              -sdk iphoneos \
+              -archivePath "$ARCHIVE_PATH" \
+              -destination "generic/platform=iOS" \
+              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+              archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG"
             XC=${PIPESTATUS[0]}
           fi
           set -o pipefail
@@ -367,7 +389,7 @@ jobs:
           fi
           exit $XC
 
-      - name: 🧾 Create ExportOptions.plist (App Store Connect)
+      - name: 🧾 Create ExportOptions.plist (App Store / TestFlight)
         shell: bash
         run: |
           set -euo pipefail
@@ -376,7 +398,7 @@ jobs:
           import os, plistlib
 
           export_options = {
-            "method": "app-store-connect",
+            "method": "app-store",  # ✅ CLI-valid value (even on Xcode 16)
             "teamID": os.environ["APPLE_TEAM_ID"],
             "signingStyle": "manual",
             "provisioningProfiles": {
@@ -404,10 +426,18 @@ jobs:
 
           set +o pipefail
           if [ -n "${XCPRETTY_CMD:-}" ]; then
-            xcodebuild               -exportArchive               -archivePath "$ARCHIVE_PATH"               -exportPath "$EXPORT_DIR"               -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
+            xcodebuild \
+              -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath "$EXPORT_DIR" \
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
             XC=${PIPESTATUS[0]}
           else
-            xcodebuild               -exportArchive               -archivePath "$ARCHIVE_PATH"               -exportPath "$EXPORT_DIR"               -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG"
+            xcodebuild \
+              -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath "$EXPORT_DIR" \
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG"
             XC=${PIPESTATUS[0]}
           fi
           set -o pipefail
@@ -443,9 +473,17 @@ jobs:
           PY
 
           if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
-            bundle exec fastlane pilot upload               --api_key_path "$ASC_API_KEY_JSON"               --ipa "$IPA_PATH"               --skip_waiting_for_build_processing true               --changelog "$RELEASE_NOTES"
+            bundle exec fastlane pilot upload \
+              --api_key_path "$ASC_API_KEY_JSON" \
+              --ipa "$IPA_PATH" \
+              --skip_waiting_for_build_processing true \
+              --changelog "$RELEASE_NOTES"
           else
-            fastlane pilot upload               --api_key_path "$ASC_API_KEY_JSON"               --ipa "$IPA_PATH"               --skip_waiting_for_build_processing true               --changelog "$RELEASE_NOTES"
+            fastlane pilot upload \
+              --api_key_path "$ASC_API_KEY_JSON" \
+              --ipa "$IPA_PATH" \
+              --skip_waiting_for_build_processing true \
+              --changelog "$RELEASE_NOTES"
           fi
 
       - name: 📎 Upload build artifacts
