--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,12 +38,31 @@ target 'JunoNative' do
   )
 
   post_install do |installer|
-    react_native_post_install(installer)
+    # --- React Native / CocoaPods standard hooks (keep yours if you have them) ---
+    # If you already have react_native_post_install(installer) or similar,
+    # keep it and place the SKIP_INSTALL enforcement AFTER it.
+    #
+    # Example:
+    # react_native_post_install(installer)
 
+    # 1) Force ALL Pods (dependencies) to be non-installable (prevents "Generic Archive")
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.1'
+        config.build_settings['SKIP_INSTALL'] = 'YES'
+      end
+    end
+
+    # 2) Force MAIN APP target to be installable so the archive contains Products/Applications/*.app
+    installer.aggregate_targets.each do |aggregate|
+      aggregate.user_project.targets.each do |target|
+        next unless target.name == 'JunoNative' # MUST match your main app target name exactly
+
+        target.build_configurations.each do |config|
+          next unless config.name == 'Release' # archive uses Release in your workflow
+
+          config.build_settings['SKIP_INSTALL'] = 'NO'
+          config.build_settings['INSTALL_PATH'] = '$(LOCAL_APPS_DIR)'
+        end
       end
     end
   end
-end
