--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -31,7 +31,7 @@ jobs:
       # Provisioning profile (.mobileprovision) as BASE64 (single-line)
       IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
 
-      # Keychain password (can be empty but better set)
+      # Keychain password
       KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
       # --- Build config ---
@@ -50,8 +50,24 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          sudo xcode-select -s /Applications/Xcode_16.app
+          echo "Available Xcodes:"
+          ls -1 /Applications | grep -i "Xcode" || true
+
+          # Prefer Xcode_16.app if present, otherwise fall back to any Xcode 16.* bundle.
+          if [ -d "/Applications/Xcode_16.app" ]; then
+            sudo xcode-select -s /Applications/Xcode_16.app
+          else
+            XCODE_16_PATH="$(ls -d /Applications/Xcode_16*.app 2>/dev/null | head -n 1 || true)"
+            if [ -n "${XCODE_16_PATH}" ]; then
+              sudo xcode-select -s "${XCODE_16_PATH}"
+            else
+              echo "❌ Xcode 16 not found in /Applications."
+              exit 1
+            fi
+          fi
+
           xcodebuild -version
+          xcode-select -p
 
       - name: Compute build paths
         shell: bash
@@ -68,7 +84,7 @@ jobs:
           echo "XCODEBUILD_ARCHIVE_LOG=$RUNNER_TEMP/xcodebuild-archive.log" >> "$GITHUB_ENV"
           echo "XCODEBUILD_EXPORT_LOG=$RUNNER_TEMP/xcodebuild-export.log" >> "$GITHUB_ENV"
 
-      - name: 🧠 Detect JS package manager (Option B)
+      - name: 🧠 Detect JS package manager
         id: pm
         shell: bash
         run: |
@@ -93,9 +109,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          corepack enable |
-
-| true
+          corepack enable || true
 
           case "${{ steps.pm.outputs.manager }}" in
             yarn)
@@ -104,7 +118,6 @@ jobs:
               if [ -f "yarn.lock" ]; then
                 yarn install --frozen-lockfile
               else
-                echo "⚠️ No yarn.lock found; running non-frozen install."
                 yarn install
               fi
               ;;
@@ -120,9 +133,7 @@ jobs:
               ;;
             pnpm)
               echo "Using pnpm..."
-              pnpm --version |
-
-| corepack prepare pnpm@latest --activate
+              pnpm --version || corepack prepare pnpm@latest --activate
               if [ -f "pnpm-lock.yaml" ]; then
                 pnpm install --frozen-lockfile
               else
@@ -154,32 +165,32 @@ jobs:
           bundler-cache: true
 
       - name: 💎 Setup Ruby (no Gemfile)
-        if: ${{ steps.ruby.outputs.use_bundler!= 'true' }}
+        if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.2"
 
-      - name: 💎 Install fastlane/cocoapods (no Gemfile)
-        if: ${{ steps.ruby.outputs.use_bundler!= 'true' }}
+      - name: 💎 Install fastlane/cocoapods/xcpretty (no Gemfile)
+        if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
         shell: bash
         run: |
           set -euo pipefail
           gem install fastlane -N
           gem install cocoapods -N
+          gem install xcpretty -N
 
-      - name: 🧰 Install CocoaPods (with fallback)
+      - name: 🧰 Install CocoaPods (clean + deterministic)
         shell: bash
         run: |
           set -euo pipefail
           cd ios
+
+          # Clean pods to ensure Podfile post_install changes actually apply
+          rm -rf Pods Podfile.lock
+          rm -rf ~/Library/Developer/Xcode/DerivedData/* || true
+
           if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
-            if bundle exec pod --version >/dev/null 2>&1; then
-              bundle exec pod install --repo-update
-            else
-              echo "⚠️ cocoapods not present in bundle; installing globally as fallback."
-              gem install cocoapods -N
-              pod install --repo-update
-            fi
+            bundle exec pod install --repo-update
           else
             pod install --repo-update
           fi
@@ -192,77 +203,17 @@ jobs:
           if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
             if bundle exec ruby -S xcpretty --version >/dev/null 2>&1; then
               echo "XCPRETTY_CMD=bundle exec xcpretty" >> "$GITHUB_ENV"
-              bundle exec ruby -S xcpretty --version |
-
-| true
+              bundle exec ruby -S xcpretty --version || true
               exit 0
             fi
           fi
 
-          if! command -v xcpretty >/dev/null 2>&1; then
+          if ! command -v xcpretty >/dev/null 2>&1; then
             gem install xcpretty -N
           fi
 
-          xcpretty --version |
-
-| true
+          xcpretty --version || true
           echo "XCPRETTY_CMD=xcpretty" >> "$GITHUB_ENV"
-
-      - name: ⚙️ Enforce SKIP_INSTALL Settings (Critical Fix)
-        # Fixes the Generic Archive error by explicitly setting installation status
-        # on the main app target and dependencies, which prevents the distribution failure.
-        shell: bash
-        run: |
-          set -euo pipefail
-          
-          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
-            RUBY_CMD="bundle exec"
-          else
-            RUBY_CMD=""
-            # Need xcodeproj gem to modify project files
-            gem install xcodeproj -N |
-
-| true
-          fi
-
-          $RUBY_CMD ruby -e '
-          require "xcodeproj"
-          
-          # Open the main application project
-          project_path = "ios/JunoNative.xcodeproj"
-          proj = Xcodeproj::Project.open(project_path)
-          
-          # Target 1: The main application executable (JunoNative)
-          main_target = proj.targets.find { |t| t.name == "JunoNative" }
-          
-          if main_target
-            # Must set SKIP_INSTALL = NO so the.app gets archived correctly.
-            main_target.build_configurations.each do |config|
-              puts "Setting SKIP_INSTALL=NO for JunoNative in #{config.name}."
-              config.build_settings = "NO"
-            end
-          else
-            puts "Warning: JunoNative main target not found."
-          end
-
-          # Target 2: The CocoaPods dependencies project
-          pods_project_path = "ios/Pods/Pods.xcodeproj"
-          if File.exist?(pods_project_path)
-            pods_proj = Xcodeproj::Project.open(pods_project_path)
-            
-            # Must set SKIP_INSTALL = YES for all dependency targets (like libs and frameworks)
-            pods_proj.targets.each do |target|
-              target.build_configurations.each do |config|
-                puts "Setting SKIP_INSTALL=YES for Pod dependency target #{target.name} in #{config.name}."
-                config.build_settings = "YES"
-              end
-            end
-            pods_proj.save
-          end
-          
-          proj.save
-          puts "✅ Project files updated with correct SKIP_INSTALL settings."
-          '
 
       - name: 🔐 Create temporary keychain
         shell: bash
@@ -286,12 +237,12 @@ jobs:
         run: |
           set -euo pipefail
 
-          if; then
-            echo "IOS_DIST_CERT_BASE64 is empty. Set it in GitHub Secrets."
+          if [ -z "${IOS_DIST_CERT_BASE64:-}" ]; then
+            echo "IOS_DIST_CERT_BASE64 is empty."
             exit 1
           fi
-          if; then
-            echo "IOS_DIST_CERT_PASSWORD is empty. Set it in GitHub Secrets."
+          if [ -z "${IOS_DIST_CERT_PASSWORD:-}" ]; then
+            echo "IOS_DIST_CERT_PASSWORD is empty."
             exit 1
           fi
 
@@ -307,7 +258,7 @@ jobs:
           except Exception as e:
             print("Invalid base64 in IOS_DIST_CERT_BASE64:", e)
             sys.exit(2)
-          out = os.environ
+          out = os.environ["CERT_P12"]
           with open(out, "wb") as f:
             f.write(data)
           print("p12 bytes:", len(data))
@@ -326,7 +277,7 @@ jobs:
           echo "Available signing identities:"
           security find-identity -v -p codesigning "$KEYCHAIN_PATH"
 
-          if! security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep -qE "\) "; then
+          if ! security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep -qE "\) "; then
             echo "No codesigning identity found in keychain after import."
             exit 1
           fi
@@ -336,8 +287,8 @@ jobs:
         run: |
           set -euo pipefail
 
-          if; then
-            echo "IOS_PROFILE_BASE64 is empty. Set it in GitHub Secrets."
+          if [ -z "${IOS_PROFILE_BASE64:-}" ]; then
+            echo "IOS_PROFILE_BASE64 is empty."
             exit 1
           fi
 
@@ -360,13 +311,9 @@ jobs:
           with open(out, "wb") as f:
             f.write(data)
           print("profile bytes:", len(data))
-          if len(data) < 500:
-            print("Decoded provisioning profile is suspiciously small (<500 bytes).")
-            sys.exit(3)
           PY
 
           /usr/bin/security cms -D -i "$PP_FILE" > "$PROFILE_PLIST"
-
           UUID=$(/usr/libexec/PlistBuddy -c 'Print:UUID' "$PROFILE_PLIST")
           NAME=$(/usr/libexec/PlistBuddy -c 'Print:Name' "$PROFILE_PLIST")
 
@@ -381,11 +328,11 @@ jobs:
         run: |
           set -euo pipefail
 
-          if; then
-            echo "APP_STORE_CONNECT_API_KEY_BASE64 is empty. Set it in GitHub Secrets."
+          if [ -z "${APP_STORE_CONNECT_API_KEY_BASE64:-}" ]; then
+            echo "APP_STORE_CONNECT_API_KEY_BASE64 is empty."
             exit 1
           fi
-          if ||; then
+          if [ -z "${APP_STORE_CONNECT_API_KEY_ID:-}" ] || [ -z "${APP_STORE_CONNECT_API_KEY_ISSUER_ID:-}" ]; then
             echo "APP_STORE_CONNECT_API_KEY_ID / APP_STORE_CONNECT_API_KEY_ISSUER_ID missing."
             exit 1
           fi
@@ -403,13 +350,10 @@ jobs:
           except Exception as e:
             print("Invalid base64 in APP_STORE_CONNECT_API_KEY_BASE64:", e)
             sys.exit(2)
-          out = os.environ
+          out = os.environ["ASC_P8_PATH"]
           with open(out, "wb") as f:
             f.write(data)
           print("p8 bytes:", len(data))
-          if len(data) < 100:
-            print("Decoded.p8 key is suspiciously small (<100 bytes).")
-            sys.exit(3)
           PY
 
           chmod 600 "$ASC_P8_PATH"
@@ -422,60 +366,46 @@ jobs:
           rm -rf "$ARCHIVE_PATH"
 
           set +o pipefail
-          if; then
-            xcodebuild \
-              -workspace "$XCODE_WORKSPACE" \
-              -scheme "$XCODE_SCHEME" \
-              -configuration "$CONFIGURATION" \
-              -sdk iphoneos \
-              -archivePath "$ARCHIVE_PATH" \
-              -destination "generic/platform=iOS" \
-              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-              archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG" | eval "$XCPRETTY_CMD"
-            XC=${PIPESTATUS}
-          else
-            xcodebuild \
-              -workspace "$XCODE_WORKSPACE" \
-              -scheme "$XCODE_SCHEME" \
-              -configuration "$CONFIGURATION" \
-              -sdk iphoneos \
-              -archivePath "$ARCHIVE_PATH" \
-              -destination "generic/platform=iOS" \
-              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-              archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG"
-            XC=${PIPESTATUS}
-          fi
+          xcodebuild \
+            -workspace "$XCODE_WORKSPACE" \
+            -scheme "$XCODE_SCHEME" \
+            -configuration "$CONFIGURATION" \
+            -sdk iphoneos \
+            -archivePath "$ARCHIVE_PATH" \
+            -destination "generic/platform=iOS" \
+            DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+            archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG" | eval "$XCPRETTY_CMD"
+          XC=${PIPESTATUS[0]}
           set -o pipefail
 
-          if [ "${XC:-1}" -eq 0 ] &&; then
-            echo "Archive directory missing at $ARCHIVE_PATH"
-            exit 1
-          fi
-          exit $XC
+          if [ "${XC:-1}" -ne 0 ]; then exit $XC; fi
+          test -d "$ARCHIVE_PATH"
 
-      - name: 🧾 Create ExportOptions.plist (App Store / TestFlight)
+          echo "🔎 Verifying archive contains Products/Applications/*.app..."
+          ls -la "$ARCHIVE_PATH/Products/Applications" || (echo "❌ Missing Products/Applications — this is a Generic Archive" && exit 2)
+
+      - name: 🧾 Create ExportOptions.plist (App Store)
         shell: bash
         run: |
           set -euo pipefail
-
           python3 - <<'PY'
           import os, plistlib
-
-          # Minimalist ExportOptions (Fixed for Xcode 16 compatibility)
           export_options = {
             "method": "app-store",
-            "teamID": os.environ,
+            "teamID": os.environ["APPLE_TEAM_ID"],
             "signingStyle": "manual",
             "provisioningProfiles": {
-              os.environ: os.environ
+              os.environ["APP_IDENTIFIER"]: os.environ["PROFILE_NAME"]
             },
             "uploadSymbols": True,
+            "uploadBitcode": False,
+            "compileBitcode": False,
+            "stripSwiftSymbols": True,
+            "manageAppVersionAndBuildNumber": True,
           }
-
-          with open(os.environ, "wb") as f:
+          with open(os.environ["EXPORT_OPTIONS_PLIST"], "wb") as f:
             plistlib.dump(export_options, f)
           PY
-
           /usr/bin/plutil -lint "$EXPORT_OPTIONS_PLIST"
 
       - name: 📤 Export IPA (xcodebuild -exportArchive)
@@ -485,35 +415,19 @@ jobs:
           rm -rf "$EXPORT_DIR"
           mkdir -p "$EXPORT_DIR"
 
-          # FIX: Explicitly pass code signing arguments to prevent "Unknown Distribution Error" (Code=2).
-          XCODE_EXPORT_OVERRIDES='CODE_SIGN_IDENTITY="Apple Distribution" CODE_SIGN_STYLE=Manual'
-
-          # Get command for xcpretty
-          XCPRETTY_COMMAND="${XCPRETTY_CMD:-}"
-
-          # Construct the base xcodebuild command
-          XCODEBUILD_CMD="xcodebuild -exportArchive -archivePath \"$ARCHIVE_PATH\" -exportPath \"$EXPORT_DIR\" -exportOptionsPlist \"$EXPORT_OPTIONS_PLIST\" $XCODE_EXPORT_OVERRIDES"
-
           set +o pipefail
-          # The use of 'eval' here is to correctly execute the pipe for xcpretty/tee when conditionally included.
-          if; then
-            # Run with xcpretty
-            eval "$XCODEBUILD_CMD 2>&1 | tee \"$XCODEBUILD_EXPORT_LOG\" | $XCPRETTY_COMMAND"
-            XC=${PIPESTATUS}
-          else
-            # Run without xcpretty
-            eval "$XCODEBUILD_CMD 2>&1 | tee \"$XCODEBUILD_EXPORT_LOG\""
-            XC=${PIPESTATUS}
-          fi
+          xcodebuild \
+            -exportArchive \
+            -archivePath "$ARCHIVE_PATH" \
+            -exportPath "$EXPORT_DIR" \
+            -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
+          XC=${PIPESTATUS[0]}
           set -o pipefail
 
-          if [ "${XC:-1}" -eq 0 ]; then
-            ls -la "$EXPORT_DIR"
-            # Ensure IPA exists
-            test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
-          fi
+          if [ "${XC:-1}" -ne 0 ]; then exit $XC; fi
 
-          exit $XC
+          ls -la "$EXPORT_DIR"
+          test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
 
       - name: 🚀 Upload to TestFlight (fastlane pilot)
         shell: bash
@@ -521,20 +435,19 @@ jobs:
           RELEASE_NOTES: ${{ inputs.release_notes }}
         run: |
           set -euo pipefail
-
-          IPA_PATH=$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" | head -n 1)
+          IPA_PATH="$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" | head -n 1)"
 
           python3 - <<'PY'
           import os, json
-          with open(os.environ, "r", encoding="utf-8") as f:
+          with open(os.environ["ASC_API_KEY_PATH"], "r", encoding="utf-8") as f:
             key = f.read()
           payload = {
-            "key_id": os.environ,
-            "issuer_id": os.environ,
+            "key_id": os.environ["APP_STORE_CONNECT_API_KEY_ID"],
+            "issuer_id": os.environ["APP_STORE_CONNECT_API_KEY_ISSUER_ID"],
             "key": key,
             "in_house": False
           }
-          with open(os.environ, "w", encoding="utf-8") as f:
+          with open(os.environ["ASC_API_KEY_JSON"], "w", encoding="utf-8") as f:
             json.dump(payload, f)
           PY
 
@@ -571,8 +484,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          if &&; then
-            security delete-keychain "$KEYCHAIN_PATH" |
-
-| true
+          if [ -n "${KEYCHAIN_PATH:-}" ] && [ -f "$KEYCHAIN_PATH" ]; then
+            security delete-keychain "$KEYCHAIN_PATH" || true
           fi
